src/objects/ICG_Contact_Account_Role_Detail_History__c.object
<CustomObject>
    <description>Historical of contact/account status</description>
    <label>OS Contact Account Role Detail History</label>
    <nameField>
        <label>Contact Account Role Detail History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OS Contact t Account Role Detail History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>ICG_Account_Role_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account related</description>
        <label>OS Account Role Detail</label>
        <referenceTo>ICG_Account_Role_Detail__c</referenceTo>
        <relationshipName>OS_Contact_Role_Detail_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICG_Contact_Role_Detail__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact related</description>
        <label>OS Contact Role Detail</label>
        <referenceTo>ICG_Contact_Role_Detail__c</referenceTo>
        <relationshipName>ICG_Contact_Role_Detail_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending for Removal</fullName>
                </value>
                <value>
                    <fullName>Pending for IATA Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>History type</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Station Creation Requests</fullName>
                </value>
                <value>
                    <fullName>Station Manager Requests</fullName>
                </value>
                <value>
                    <fullName>Admin Requests</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>